--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,7 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Karla&family=Work+Sans&display=swap");
+
 /* Fonts */
-$family-primary: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-  sans-serif, Apple Color Emoji, Segoe UI Emoji;
+$family-primary: "Karla", -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica,
+  Arial, sans-serif;
+
+// $body-family: $family-primary;
 
 /* Colors */
+$blue: #68b1c7;
+$primary: $blue;
 
 @import "~bulma/bulma";
