Migrate vue-cli to vite

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -9,4 +9,4 @@ $family-secondary: "Work Sans", -apple-system, BlinkMacSystemFont, Segoe UI,
 /* Colors */
 $primary: #7ccbdf;
 
-@import "~bulma/bulma";
+@import "bulma/bulma";
